# P2DingoCV

./: .buildinfo  .gitignore  .pylintrc  README.md  compile.sh  genindex.html  hotspot_profile.prof  hotspot_profile.py  index.html  objects.inv  parameters.json  py-modindex.html  pyproject.toml  rebuildDocs.sh  requirements.txt  search.html  searchindex.js  setup.sh  time.py
.github/workflows/: documentation.yml
_autosummary/: P2DingoCV.Camera.Camera.html  P2DingoCV.Camera.CameraFactory.html  P2DingoCV.Camera.ImageCamera.html  P2DingoCV.Camera.VideoCamera.html  P2DingoCV.Camera.html  P2DingoCV.HotspotLogic.DiagonsticsUtil.html  P2DingoCV.HotspotLogic.Exceptions.TempDetectionFail.html  P2DingoCV.HotspotLogic.Exceptions.html  P2DingoCV.HotspotLogic.HotSpotDetectorSubclasses.MaximumDetector.html  P2DingoCV.HotspotLogic.HotSpotDetectorSubclasses.MinimalDetector.html  P2DingoCV.HotspotLogic.HotSpotDetectorSubclasses.VerboseDetector.html  P2DingoCV.HotspotLogic.HotSpotDetectorSubclasses.VisualDetector.html  P2DingoCV.HotspotLogic.HotSpotDetectorSubclasses.html  P2DingoCV.HotspotLogic.HotspotDetector.html  P2DingoCV.HotspotLogic.html  P2DingoCV.PanelSegmentation.PanelSegmentor.html  P2DingoCV.PanelSegmentation.html  P2DingoCV.Types.Types.html  P2DingoCV.Types.html  P2DingoCV.Util.MiscUtil.html  P2DingoCV.Util.VisualUtil.html  P2DingoCV.Util.html  P2DingoCV.cli.html  P2DingoCV.html
_modules/: index.html
_modules/P2DingoCV/: cli.html
_sources/: index.rst.txt
experimentation/: draw.py  line angles.txt  readFiles.py
src/: DisplayUnit.py  cli.py  main.py
(+78 files in other folders)
